apps/searxng/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-external
  namespace: traefik
spec:
  type: ExternalName
  externalName: searxng.searxng.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`search.oisd.io`)
      kind: Rule
      services:
        - name: searxng-external
          port: 8080
          scheme: http
      middlewares:
        - name: default-chain
  tls:
    secretName: wildcard-tls-oisd
